# MkdocstringsPythonGenerator

./: LICENCE.md  README.md  pyproject.toml
.github/workflows/: pull_request.yaml
mkdocs/: mkdocs.yaml
mkdocs/docs/: configuration.md  index.md
mkdocs/docs/assets/: extra.css
source/mkdocstrings_python_generator/: __init__.py  config.py  files_generator.py  nav_util.py  plugin.py  reference_data.py
source/tests/: conftest.py  test_files_generator.py  test_reference_data.py
source/tests/example/sub_package/: baz_bob.py
