[tool.poetry]
name = "mkdocstrings-python-generator"
version = "0.1.0"
description = "Autogenerates a project's mkdocs reference documentation via mkdocstrings-python"
authors = ["Philip Couling <couling@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "mkdocstrings_python_generator", from = "source" },
]

[tool.poetry.dependencies]
python = "^3.7"
mkdocstrings-python = "^1.1.2"
mkdocs = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
yapf = "^0.40.1"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.18"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"
pattern = "^v?(?P<base>\\d+(\\.\\d+)*)((?P<stage>(a|b|rc|post))(?P<revision>[0-9])+)?"
bump = true

[build-system]
requires = ["poetry-core>=1.3.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.pytest.ini_options]
testpaths = [
    "source/tests/",
]


[tool.poetry.plugins."mkdocs.plugins"]
mkdocstrings-python-generator = "mkdocstrings_python_generator.plugin:GeneratePythonDocs"


[tool.yapf]
based_on_style="facebook"
column_limit=120